stateless-poc-I/kubernetes-manifests/sample-apache/apache-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: \\/apache-2
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: apache-2
