stateless-poc-I/kubernetes-manifests/sample-apache/apache-2-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apache-2-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
#    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host:  enmk8s.athtem.eei.ericsson.se
    http:
      paths:
      - path: /apache-2/*
        backend:
          serviceName: apache-2
          servicePort: 80
  tls:
  - hosts:
    -  enmk8s.athtem.eei.ericsson.se
#    secretName: python-secret
